# VARA-PINN-v3-Improv1

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: ablation_full_vara.yaml  ablation_global_only.yaml  ablation_region_only.yaml  ablation_variable_only.yaml  cylinder_wake.yaml  kovasznay.yaml  kovasznay_debug.yaml  lid_driven_cavity.yaml  lid_driven_cavity_reviewer.yaml  lid_driven_cavity_vanilla_direct.yaml  lid_driven_cavity_vanilla_streamfunction.yaml  lid_driven_cavity_vara_direct.yaml  lid_driven_cavity_vara_streamfunction.yaml  taylor_green.yaml
experiments/: kova_5seed_collapse_table.csv  kova_5seed_raw.csv  kova_5seed_summary.csv
notebooks/: 01_kovasznay_prototype.ipynb  02_diagnostics_debug.ipynb  03_controller_debug.ipynb
scripts/: aggregate_benchmark_results.py  aggregate_reviewer_results.py  benchmark_runner.py  evaluate_checkpoint.py  export_tables.py  generate_figures.py  run_ablation.py  run_all_baselines.py  run_all_benchmarks.py  run_boundary_condition_stress_test.py  run_channel_inflow_outflow.py  run_double_vortex_box.py  run_lid_driven_cavity.py  run_multiseed.py  run_rectangular_aspect_ratio_sweep.py  run_reviewer_grade_cavity.py  train_baseline.py  train_vara.py
src/: __init__.py
src/models/: mlp.py  (+6 more)
tests/: test_benchmark_metric_guards.py  test_controller.py  test_diagnostics.py  test_kovasznay_solution.py  test_lid_cavity_reference.py  test_local_logging.py  test_local_losses.py  test_patch_scores.py  test_rectangular_benchmarks.py  test_residuals.py  test_reviewer_infrastructure.py  test_sampling.py  (+1 more)
(+71 files in other folders)
