[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vara-pinn"
version = "0.1.0"
description = "Variable-Aware Regional Adaptive Control for multi-field Navier-Stokes PINNs"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "numpy",
  "pandas",
  "matplotlib",
  "pyyaml",
  "tqdm",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

